--- a/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/Shared/MainLayout.razor
+++ b/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/Shared/MainLayout.razor
@@ -7,7 +7,12 @@
 
     <div class="main">
         <div class="top-row px-4">
-            <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1">Search</span>
+                </div>
+                <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon1">
+            </div>
         </div>
 
         <div class="content px-4">
