sign in as user. very basic

--- a/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/Shared/MainLayout.razor
+++ b/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/Shared/MainLayout.razor
@@ -1,4 +1,8 @@
 ﻿@inherits LayoutComponentBase
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@inject NavigationManager Navigation
+@inject SignOutSessionStateManager SignOutManager
 
 <div class="page">
     <div class="sidebar">
@@ -7,12 +11,17 @@
 
     <div class="main">
         <div class="top-row px-4">
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1">Search</span>
-                </div>
-                <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon1">
-            </div>
+            <AuthorizeView>
+                <Authorized>
+                    Hello, @context.User.Identity.Name!
+                    <button class="nav-link btn btn-link" @onclick="BeginLogout">
+                        Log out
+                    </button>
+                </Authorized>
+                <NotAuthorized>
+                    <a href="authentication/login">Log in</a>
+                </NotAuthorized>
+            </AuthorizeView>
         </div>
 
         <div class="content px-4">
@@ -20,3 +29,11 @@
         </div>
     </div>
 </div>
+
+@code {
+    private async Task BeginLogout(MouseEventArgs args)
+    {
+        await SignOutManager.SetSignOutState();
+        Navigation.NavigateTo("authentication/logout");
+    }
+}
