--- a/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/Pages/Index.razor
+++ b/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/Pages/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @using System.Net.Http
 @using Microsoft.Extensions.Configuration
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 
 @inject HttpClient Http
 @inject IConfiguration Configuration
@@ -17,46 +18,46 @@
 }
 else
 {
-    
+
     @foreach (var capability in capabilityResults)
+    {
+        @if (blacklist.Any(capability.capabilityName.Contains) == false)
         {
-            @if (blacklist.Any(capability.capabilityName.Contains) == false)
-            {
-                <div class="accordion" id="accordionCapability">
-                    <div class="card">
-                        <div class="card-header" id="headingOne">
-                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">@capability.capabilityName Capability</button>
-                        </div>
-                        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionCapability">
-                            <div class="card-body">
-                                <h4>Ingresses</h4>
-                                @foreach (var ingress in capability.ingresses)
+            <div class="accordion" id="accordionCapability">
+                <div class="card">
+                    <div class="card-header" id="headingOne">
+                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">@capability.capabilityName Capability</button>
+                    </div>
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionCapability">
+                        <div class="card-body">
+                            <h4>Ingresses</h4>
+                            @foreach (var ingress in capability.ingresses)
+                            {
+                                @foreach (var rules in ingress.Spec.Rules)
                                 {
-                                    @foreach (var rules in ingress.Spec.Rules)
+                                    @if (rules.Http != null)
                                     {
-                                        @if (rules.Http != null)
+                                        @foreach (var paths in rules.Http.Paths)
                                         {
-                                            @foreach (var paths in rules.Http.Paths)
-                                            {
-                                                <a href="https://@(rules.Host + paths.Path)">@ingress.Metadata.Name</a> <a href="https://@(rules.Host + paths.Path)/swagger"><img height="10" width="10" src="swagger.png" /></a> <a href="">[Install Proxy]</a>
-                                                <br />
-                                            }
+                                            <a href="https://@(rules.Host + paths.Path)">@ingress.Metadata.Name</a> <a href="https://@(rules.Host + paths.Path)/swagger"><img height="10" width="10" src="swagger.png" /></a> <a href="">[Install Proxy]</a>
+                                            <br />
                                         }
                                     }
                                 }
+                            }
 
-                                <h4>Services</h4>
-                                @foreach (var service in capability.services)
-                                {
-                                    @service.Metadata.Name
-                                    <br />
-                                }
-                            </div>
+                            <h4>Services</h4>
+                            @foreach (var service in capability.services)
+                            {
+                                @service.Metadata.Name
+                                <br />
+                            }
                         </div>
                     </div>
-                    </div>
-                    }
-                    }
+                </div>
+            </div>
+        }
+    }
 }
 
 
