--- a/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/Pages/Index.razor
+++ b/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/Pages/Index.razor
@@ -7,59 +7,70 @@
 
 @inject HttpClient Http
 @inject IConfiguration Configuration
+@inject IHttpClientFactory ClientFactory
 
-<h1>DFDS ProxyService Catalog</h1>
 
-<p>Each Capability's ingresses and services are shown below.</p>
-@if (capabilityResults == null)
-{
-    <div class="spinner-border" role="status">
-        <span class="sr-only">Loading...</span>
-    </div>
-}
-else
-{
+<AuthorizeView>
+    <Authorized>
+        <h1>DFDS ProxyService Catalog</h1>
 
-    @foreach (var capability in capabilityResults)
-    {
-        @if (blacklist.Any(capability.capabilityName.Contains) == false)
+        <p>Each Capability's ingresses and services are shown below.</p>
+        @if (capabilityResults == null)
         {
-            <div class="accordion" id="accordionCapability">
-                <div class="card">
-                    <div class="card-header" id="headingOne">
-                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">@capability.capabilityName Capability</button>
-                    </div>
-                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionCapability">
-                        <div class="card-body">
-                            <h4>Ingresses</h4>
-                            @foreach (var ingress in capability.ingresses)
-                            {
-                                @foreach (var rules in ingress.Spec.Rules)
-                                {
-                                    @if (rules.Http != null)
-                                    {
-                                        @foreach (var paths in rules.Http.Paths)
-                                        {
-                                            <a href="https://@(rules.Host + paths.Path)">@ingress.Metadata.Name</a> <a href="https://@(rules.Host + paths.Path)/swagger"><img height="10" width="10" src="swagger.png" /></a> <a href="">[Install Proxy]</a>
-                                            <br />
-                                        }
-                                    }
-                                }
-                            }
-
-                            <h4>Services</h4>
-                            @foreach (var service in capability.services)
-                            {
-                                @service.Metadata.Name
-                                <br />
-                            }
-                        </div>
-                    </div>
-                </div>
+            <div class="spinner-border" role="status">
+                <span class="sr-only">Loading...</span>
             </div>
         }
-    }
-}
+        else
+        {
+
+            @foreach (var capability in capabilityResults)
+            {
+                @if (blacklist.Any(capability.capabilityName.Contains) == false)
+                {
+                    <div class="accordion" id="accordionCapability">
+                        <div class="card">
+                            <div class="card-header" id="headingOne">
+                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">@capability.capabilityName Capability</button>
+                            </div>
+                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionCapability">
+                                <div class="card-body">
+                                    <h4>Ingresses</h4>
+                                    @foreach (var ingress in capability.ingresses)
+                                    {
+                                        @foreach (var rules in ingress.Spec.Rules)
+                                        {
+                                            @if (rules.Http != null)
+                                            {
+                                                @foreach (var paths in rules.Http.Paths)
+                                                {
+                                                    <a href="https://@(rules.Host + paths.Path)">@ingress.Metadata.Name</a> <a href="https://@(rules.Host + paths.Path)/swagger"><img height="10" width="10" src="swagger.png" /></a> <a href="">[Install Proxy]</a>
+                                                    <br />
+                                                }
+                                            }
+                                        }
+                                    }
+
+                                    <h4>Services</h4>
+                                    @foreach (var service in capability.services)
+                                    {
+                                        @service.Metadata.Name
+                                        <br />
+                                    }
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+            }
+        }
+    </Authorized>
+    <NotAuthorized>
+        Not Authorised
+    </NotAuthorized>
+</AuthorizeView>
+
+
 
 
 @code {
@@ -100,10 +111,25 @@ else
             blacklist.Add(b);
         }
 
-        //Http.BaseAddress = new Uri(Configuration["ApiUrl"]);
-        results = await Http.GetFromJsonAsync<ServiceProxyResult[]>("api/ServiceProxy");
+        try
+        {
+            var client = ClientFactory.CreateClient("DFDSServiceApi");
+            results = await client.GetFromJsonAsync<ServiceProxyResult[]>("api/ServiceProxy");
+        }
+        catch (AccessTokenNotAvailableException exception)
+        {
+            exception.Redirect();
+        }
+        catch (Exception e)
+        {
+            Console.WriteLine(e);
+        }
 
-        GetCapabilities();
+        if (results != null)
+        {
+            GetCapabilities();
+        }
+
     }
 
     void GetCapabilities()
